para que funcione en localhost

--- a/.htaccess
+++ b/.htaccess
@@ -15,7 +15,7 @@ RewriteCond %{REQUEST_URI} ^application.*
 RewriteRule ^(.*)$ /index.php?/$1 [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /index.php?/$1 [L]
+RewriteRule ^(.*)$ /HomeopatiaCastellon/index.php?/$1 [L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
